--- a/main/package.json
+++ b/main/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.19.1",
+    "echarts": "^5.3.1",
     "moment": "^2.29.1",
     "react": "17.x",
     "react-dom": "17.x",
