--- a/main/package.json
+++ b/main/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-grid-layout": "^1.3.4",
     "tui-calendar": "^1.15.3",
     "umi": "^3.5.21"
   },
