--- a/main/package.json
+++ b/main/package.json
@@ -31,6 +31,7 @@
     "umi": "^3.5.21"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.63",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
